deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-simulator
  labels:
    app.kubernetes.io/name: ckad-simulator
